add get exercises route
